[package]
name = "rs_box"
version = "0.0.20"
description = "rust develop box"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
documentation = "https://github.com/george012/rs_box"
homepage = "https://github.com/george012/rs_box"
repository = "https://github.com/george012/rs_box"
keywords = [
    "rust_box",
    "rustbox",
    "rust-box",
    "toolkit",
    "ToolBox",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_box"
path = "src/lib.rs"


[dependencies]
log = "^0"
chrono = "^0"
lazy_static = "^1"
once_cell = "^1"
toml = "^0.8"
pathdiff = "^0.2"
backtrace = "^0.3"
